--- a/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
@@ -27,6 +27,47 @@
                 android:layout_height="wrap_content"
                 android:text="Meeting Details" />
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/meeting_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Name of Meeting" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Date"
+                    android:inputType="date" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Time"
+                    android:inputType="time" />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/add_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Notes" />
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
@@ -93,6 +134,18 @@
                     android:layout_height="wrap_content"
                     android:hint="Room Number (Optional)" />
             </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/add_users_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Users to Meeting" />
+
+            <Button
+                android:id="@+id/create_meeting_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create Meeting" />
         </LinearLayout>
     </ScrollView>
 
