--- a/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_create_a__meeting.xml
@@ -62,11 +62,22 @@
                     android:inputType="time" />
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Additional Notes (Optional)" />
+            </android.support.design.widget.TextInputLayout>
+
             <Button
-                android:id="@+id/add_notes"
+                android:id="@+id/add_attachments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add Notes" />
+                android:text="Add File" />
 
             <TextView
                 android:id="@+id/textView"
