--- a/meeting_client/app/src/main/res/layout/user_search_item.xml
+++ b/meeting_client/app/src/main/res/layout/user_search_item.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/from"
+            android:id="@+id/search_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -32,7 +32,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/event_name"
+            android:id="@+id/search_username"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -42,7 +42,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/event_date"
+            android:id="@+id/search_email"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -52,7 +52,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/event_place"
+            android:id="@+id/search_phone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -61,4 +61,5 @@
             android:text="TextView"
             android:textSize="20dp" />
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
