--- a/meeting_client/app/src/main/res/layout/content_create_event.xml
+++ b/meeting_client/app/src/main/res/layout/content_create_event.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".CreateEvent"
+    tools:context=".EventCreation"
     tools:showIn="@layout/activity_create_event">
 
     <TextView
