--- a/meeting_client/app/src/main/res/layout/content_registration.xml
+++ b/meeting_client/app/src/main/res/layout/content_registration.xml
@@ -124,7 +124,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit_button"
-            android:onClick="submitRegistration"/>
+            android:onClick="sendRegistrationRequest"/>
 
     </LinearLayout>
 </ScrollView>
