--- a/meeting_client/app/src/main/res/layout/content_event_edition.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_edition.xml
@@ -7,7 +7,7 @@
     android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/name_layout"
+        android:id="@+id/last_name_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -16,7 +16,7 @@
 
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/name"
+            android:id="@+id/last_name"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -41,7 +41,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name">
+            app:layout_constraintTop_toBottomOf="@+id/last_name">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/date"
