--- a/meeting_client/app/src/main/res/layout/content_profile_edition.xml
+++ b/meeting_client/app/src/main/res/layout/content_profile_edition.xml
@@ -14,21 +14,22 @@
         tools:showIn="@layout/activity_profile_edition">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/name_layout"
+            android:id="@+id/last_name_layout"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/name"
+                android:id="@+id/last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name" />
+                android:hint="Last Name" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -40,7 +41,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_layout">
+            app:layout_constraintTop_toBottomOf="@+id/last_name_layout">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/username"
@@ -109,7 +110,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/add_users"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.136"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/picture_label"
             app:srcCompat="@mipmap/ic_launcher" />
@@ -118,25 +119,43 @@
             android:id="@+id/add_users"
             android:layout_width="121dp"
             android:layout_height="54dp"
-            android:layout_marginTop="564dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginTop="76dp"
+            android:layout_marginEnd="48dp"
             android:text="UPLOAD"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/picture_label" />
 
         <Button
             android:id="@+id/save"
             android:layout_width="125dp"
             android:layout_height="66dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="716dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="8dp"
             android:text="SAVE"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout2"
+            android:layout_width="312dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="92dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="First Name" />
+        </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
